cmake_minimum_required(VERSION 3.3)
cmake_policy(SET CMP0058 NEW)
enable_testing()
project(test-cxx-pic-shared)
include(../../PrecompiledHeader.cmake)
if(MSVC)
  add_definitions(-D_CRT_SECURE_NO_WARNINGS)
  set(pch_source test-pch.cpp)
endif()
set(CMAKE_CXX_FLAGS "${CMAKH_CXX_FLAGS} -Werror")
set(CMAKE_C_FLAGS "${CMAKH_CXX_FLAGS} -Werror")
add_library(test-cxx-pic-lib SHARED test-cxx-lib.cpp test-pch.h ${pch_source})
add_precompiled_header(test-cxx-pic-lib test-pch.h FORCEINCLUDE)
add_executable(test-cxx-pic-shared test-cxx.cpp)
target_link_libraries(test-cxx-pic-shared test-cxx-pic-lib)
add_test(test-cxx-pic-shared test-cxx-pic-shared)
