cmake_minimum_required(VERSION 3.3)
cmake_policy(SET CMP0058 NEW)
enable_testing()
project(test-cxx-pie)
include(../../PrecompiledHeader.cmake)
if(MSVC)
  add_definitions(-D_CRT_SECURE_NO_WARNINGS)
  set(pch_source test-pch.cpp)
endif()
set(CMAKE_CXX_FLAGS "${CMAKH_CXX_FLAGS} -Werror")
set(CMAKE_C_FLAGS "${CMAKH_CXX_FLAGS} -Werror")
add_executable(test-cxx-pie test-cxx.cpp test-pch.h ${pch_source})
set_target_properties(test-cxx-pie PROPERTIES POSITION_INDEPENDENT_CODE ON)
add_precompiled_header(test-cxx-pie test-pch.h FORCEINCLUDE)
add_test(test-cxx-pie test-cxx-pie)
