cmake_minimum_required(VERSION 3.3)
cmake_policy(SET CMP0058 NEW)
enable_testing()
project(test-cxx11)
include(../../PrecompiledHeader.cmake)
if(MSVC)
  add_definitions(-D_CRT_SECURE_NO_WARNINGS)
  set(pch_source test-pch.cpp)
endif()
set(CMAKE_CXX_FLAGS "${CMAKH_CXX_FLAGS} -Werror")
set(CMAKE_C_FLAGS "${CMAKH_CXX_FLAGS} -Werror")
set(CMAKE_CXX_STANDARD 11)
add_executable(test-cxx11 test-cxx.cpp test-pch.h ${pch_source})
add_precompiled_header(test-cxx11 test-pch.h)
add_test(test-cxx11 test-cxx11)
